syntax = "proto3";

option go_package = "urlshortener/pkg/proto/cachepb";
option java_multiple_files = true;
option java_package = "cachepb";
option java_outer_classname = "CachePb";

package cachepb;

service CacheService {
	rpc Get(GetRequest) returns (GetResponse) {}
	rpc Set(SetRequest) returns (NoContent) {}
}

message GetRequest {
	string key = 1;
}

message GetResponse {
	string value = 1;
}

message SetRequest {
	string key = 1;
	string value = 2;
}

message NoContent {}